After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669834 - [regression] SIGSEGV on startup in 3.3.5
[regression] SIGSEGV on startup in 3.3.5
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
3.3.x
Other Linux
: Normal critical
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-10 20:41 UTC by David Ronis
Modified: 2012-02-17 11:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description David Ronis 2012-02-10 20:41:56 UTC
I've rebuilt/installed g-c-c as part of moving to gnome-3.3.5.    It compiles fine, but when I run g-c-c it crashes with a SIGSEGV.   There is no console output.  I also tried the git/master, with the same result.

Here's a backtrace:

Program terminated with signal 11, Segmentation fault.

Thread 1 (Thread 0xb66227f0 (LWP 14258))

  • #0 pthread_mutex_lock
    from /lib/libpthread.so.0
  • #1 ??
    from /usr/X11/lib/libX11.so.6
  • #2 XrmQGetResource
    from /usr/X11/lib/libX11.so.6
  • #3 XGetDefault
    from /usr/X11/lib/libX11.so.6
  • #4 get_boolean_default
    at cairo-xlib-screen.c line 95
  • #5 _cairo_xlib_init_screen_font_options
    at cairo-xlib-screen.c line 143
  • #6 _cairo_xlib_screen_get_font_options
    at cairo-xlib-screen.c line 455
  • #7 _cairo_xlib_surface_get_font_options
    at cairo-xlib-surface.c line 3045
  • #8 _cairo_surface_subsurface_get_font_options
    at cairo-surface-subsurface.c line 271
  • #9 *INT_cairo_surface_get_font_options
    at cairo-surface.c line 1079
  • #10 *INT_cairo_surface_get_font_options
    at cairo-surface.c line 1062
  • #11 _cairo_gstate_ensure_scaled_font
    at cairo-gstate.c line 1800
  • #12 _cairo_gstate_ensure_scaled_font
    at cairo-gstate.c line 1787
  • #13 _cairo_gstate_show_text_glyphs
    at cairo-gstate.c line 1921
  • #14 cairo_show_glyphs
    at cairo.c line 3509
  • #15 cairo_show_glyphs
    at cairo.c line 3489
  • #16 pango_cairo_renderer_show_text_glyphs
    at pangocairo-render.c line 367
  • #17 pango_cairo_renderer_draw_glyphs
    at pangocairo-render.c line 383
  • #18 pango_renderer_draw_glyphs
    at pango-renderer.c line 641
  • #19 pango_renderer_draw_glyph_item
    at pango-renderer.c line 705
  • #20 pango_renderer_draw_layout_line
    at pango-renderer.c line 570
  • #21 pango_renderer_draw_layout
    at pango-renderer.c line 194
  • #22 _pango_cairo_do_layout
    at pangocairo-render.c line 877
  • #23 gtk_theming_engine_render_layout
    at gtkthemingengine.c line 2140
  • #24 gtk_render_layout
    at gtkstylecontext.c line 4181
  • #25 gtk_label_draw
    at gtklabel.c line 4045
  • #26 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #27 gtk_widget_draw_marshaller
    at gtkwidget.c line 821
  • #28 g_type_class_meta_marshal
    at gclosure.c line 885
  • #29 g_closure_invoke
    at gclosure.c line 774
  • #30 signal_emit_unlocked_R
    at gsignal.c line 3340
  • #31 g_signal_emit_valist
    at gsignal.c line 3043
  • #32 g_signal_emit
    at gsignal.c line 3090
  • #33 _gtk_widget_draw_internal
    at gtkwidget.c line 5731
  • #34 _gtk_widget_draw_internal
    at gtkwidget.c line 5707
  • #35 gtk_container_propagate_draw
    at gtkcontainer.c line 3342
  • #36 gtk_container_draw_child
    at gtkcontainer.c line 3189
  • #37 gtk_frame_forall
    at gtkframe.c line 381
  • #38 gtk_container_forall
    at gtkcontainer.c line 2014
  • #39 gtk_container_draw
    at gtkcontainer.c line 3206
  • #40 gtk_frame_draw
    at gtkframe.c line 725
  • #41 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #42 gtk_widget_draw_marshaller
    at gtkwidget.c line 821
  • #43 g_type_class_meta_marshal
    at gclosure.c line 885
  • #44 g_closure_invoke
    at gclosure.c line 774
  • #45 signal_emit_unlocked_R
    at gsignal.c line 3340
  • #46 g_signal_emit_valist
    at gsignal.c line 3043
  • #47 g_signal_emit
    at gsignal.c line 3090
  • #48 _gtk_widget_draw_internal
    at gtkwidget.c line 5731
  • #49 _gtk_widget_draw_internal
    at gtkwidget.c line 5707
  • #50 gtk_container_propagate_draw
    at gtkcontainer.c line 3342
  • #51 gtk_container_draw_child
    at gtkcontainer.c line 3189
  • #52 gtk_box_forall
    at gtkbox.c line 1857
  • #53 gtk_container_forall
    at gtkcontainer.c line 2014
  • #54 gtk_container_draw
    at gtkcontainer.c line 3206
  • #55 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #56 gtk_widget_draw_marshaller
    at gtkwidget.c line 821
  • #57 g_type_class_meta_marshal
    at gclosure.c line 885
  • #58 g_closure_invoke
    at gclosure.c line 774
  • #59 signal_emit_unlocked_R
    at gsignal.c line 3340
  • #60 g_signal_emit_valist
    at gsignal.c line 3043
  • #61 g_signal_emit
    at gsignal.c line 3090
  • #62 _gtk_widget_draw_internal
    at gtkwidget.c line 5731
  • #63 _gtk_widget_draw_internal
    at gtkwidget.c line 5707
  • #64 gtk_container_propagate_draw
    at gtkcontainer.c line 3342
  • #65 gtk_container_draw_child
    at gtkcontainer.c line 3189
  • #66 gtk_bin_forall
    at gtkbin.c line 172
  • #67 gtk_container_forall
    at gtkcontainer.c line 2014
  • #68 gtk_container_draw
    at gtkcontainer.c line 3206
  • #69 gtk_viewport_draw
    at gtkviewport.c line 787
  • #70 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #71 gtk_widget_draw_marshaller
    at gtkwidget.c line 821
  • #72 g_type_class_meta_marshal
    at gclosure.c line 885
  • #73 g_closure_invoke
    at gclosure.c line 774
  • #74 signal_emit_unlocked_R
    at gsignal.c line 3340
  • #75 g_signal_emit_valist
    at gsignal.c line 3043
  • #76 g_signal_emit
    at gsignal.c line 3090
  • #77 _gtk_widget_draw_internal
    at gtkwidget.c line 5731
  • #78 _gtk_widget_draw_internal
    at gtkwidget.c line 5707
  • #79 gtk_widget_send_expose
    at gtkwidget.c line 5991
  • #80 gtk_main_do_event
    at gtkmain.c line 1602
  • #81 _gdk_event_emit
    at gdkevents.c line 71
  • #82 _gdk_window_process_updates_recurse
    at gdkwindow.c line 3894
  • #83 _gdk_window_process_updates_recurse
    at gdkwindow.c line 3939
  • #84 _gdk_window_process_updates_recurse
    at gdkwindow.c line 3939
  • #85 _gdk_window_process_updates_recurse
    at gdkwindow.c line 3939
  • #86 gdk_x11_window_process_updates_recurse
    at gdkwindow-x11.c line 4779
  • #87 gdk_window_process_updates_internal
    at gdkwindow.c line 4080
  • #88 gdk_window_process_all_updates
    at gdkwindow.c line 4211
  • #89 gtk_container_idle_sizer
    at gtkcontainer.c line 1664
  • #90 gdk_threads_dispatch
    at gdk.c line 745
  • #91 g_idle_dispatch
    at gmain.c line 4629
  • #92 g_main_dispatch
    at gmain.c line 2510
  • #93 g_main_context_dispatch
    at gmain.c line 3047
  • #94 g_main_context_iterate
    at gmain.c line 3118
  • #95 g_main_context_iterate
    at gmain.c line 3055
  • #96 g_main_context_iteration
    at gmain.c line 3179
  • #97 g_application_run
    at gapplication.c line 1496
  • #98 main
    at control-center.c line 199

Comment 1 Baste 2012-02-16 20:38:06 UTC
Hi
I had the same problem of segfault with g-c-c-3.3.5.
I recompile g-c-c without the cheese support and i have not any problem now.
Hoping that it have solved your problem
see you soon.

French user :) ( for the english )
Comment 2 David Ronis 2012-02-16 23:45:23 UTC
Bonjour Baste,

Merci! Je va essayer dans quelques instantes.    (En Quebec, nous parlons francais).
Comment 3 David Ronis 2012-02-17 00:09:53 UTC
OK, I tried the suggestion in comment 1.    Indeed g-c-c now maps.  However some functionalities are broken (e.g.,  "Date and Time" and "User Accounts").
Comment 4 Bastien Nocera 2012-02-17 11:49:32 UTC
commit 74f29490225a59ce5a0b0f94b2c27ada5cdf1cc3
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Feb 17 12:46:45 2012 +0100

    shell: Fix cheese related crashers
    
    By initialising threading in X11. It's like Totem 10 years ago
    (except that libXi doesn't deadlock).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=669834