shell: Fix cheese related crashers

By initialising threading in X11. It's like Totem 10 years ago
(except that libXi doesn't deadlock).

https://bugzilla.gnome.org/show_bug.cgi?id=669834